# kaijuGL

./: .gitignore  CMakeLists.txt  LICENSE  LinuxWindow  README.md  README.md.backup  TextTextures  WoldDraw  build.sh  imgui.ini  macBuildAndRun.sh  macbuild.sh  main.cpp  main.cpp.bck  mainTests.cpp
assets/Shaders/: Basic.shader  BasicLightObject.shader  BasicLighting.shader  BasicLightingWithShadows.shader  BasicVertex.shader  BasicVertexWithShadows.shader  BlinnPhong.shader  ColorImg.shader  FrameBuffer.shader  FrameKernel.shader  FrameVertex.shader  ImgLoad.shader  MultiImg.shader  PBR.shader  ShadowFragment.shader  ShadowVertex.shader  SimpleDepth.shader  SpriteSheet.shader
src/: Camera.cpp  Camera.hpp  Engine.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  KaijuRenderWarnings.cpp  KaijuRenderWarnings.hpp  KaijuWindow.cpp  KaijuWindow.hpp  KijuwWindow.cpp  KijuwWindow.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SimpleObject.cpp  SimpleObject.hpp  SimplePhysics.cpp  SimplePhysics.hpp  SimplePhysicsObjects.cpp  SimplePhysicsObjects.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp  kaijuGL.hpp  kijuwGL.hpp  macTestbuild.sh  main.cpp
src/Imports/imgui/: imgui_tables.cpp
src/Imports/imgui/docs/: CHANGELOG.txt
src/Imports/imgui/examples/example_apple_metal/iOS/: Info-iOS.plist
src/Seens/: BasicMovement.cpp  BasicMovement.hpp
src/Tests/: TestBatchStreamData.h  TestClearColor.h
src/src/: Camera.cpp  FrameBufferObject.cpp  FrameBufferObject.hpp  Renderer.cpp  Shader.hpp  SimpleObject.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp
src/src/Imports/imgui/examples/example_marmalade/data/: app.icf
src/src/Seens/: BasicMovement.hpp
src/src/Tests/: TestBatchRender.cpp  TestBatchRender.h  TestBatchStreamData.cpp  TestClearColor.cpp  TestTexture2d.cpp  TestTexture2d.h  test.cpp  test.h
