cmake_minimum_required(VERSION 3.20)
project(kaijuGL)

set(CMAKE_CXX_STANDARD 17)

include_directories(src)
include_directories(src/Imports/glm)
include_directories(src/Imports/glm/detail)
include_directories(src/Imports/glm/ext)
include_directories(src/Imports/glm/gtc)
include_directories(src/Imports/glm/gtx)
include_directories(src/Imports/glm/simd)
include_directories(src/Imports/stb_image)
include_directories(src/Seens)

add_executable(kaijuGL
        src/Imports/glm/detail/_features.hpp
        src/Imports/glm/detail/_fixes.hpp
        src/Imports/glm/detail/_noise.hpp
        src/Imports/glm/detail/_swizzle.hpp
        src/Imports/glm/detail/_swizzle_func.hpp
        src/Imports/glm/detail/_vectorize.hpp
        src/Imports/glm/detail/compute_common.hpp
        src/Imports/glm/detail/compute_vector_relational.hpp
        src/Imports/glm/detail/func_common.inl
        src/Imports/glm/detail/func_common_simd.inl
        src/Imports/glm/detail/func_exponential.inl
        src/Imports/glm/detail/func_exponential_simd.inl
        src/Imports/glm/detail/func_geometric.inl
        src/Imports/glm/detail/func_geometric_simd.inl
        src/Imports/glm/detail/func_integer.inl
        src/Imports/glm/detail/func_integer_simd.inl
        src/Imports/glm/detail/func_matrix.inl
        src/Imports/glm/detail/func_matrix_simd.inl
        src/Imports/glm/detail/func_packing.inl
        src/Imports/glm/detail/func_packing_simd.inl
        src/Imports/glm/detail/func_trigonometric.inl
        src/Imports/glm/detail/func_trigonometric_simd.inl
        src/Imports/glm/detail/func_vector_relational.inl
        src/Imports/glm/detail/func_vector_relational_simd.inl
        src/Imports/glm/detail/glm.cpp
        src/Imports/glm/detail/qualifier.hpp
        src/Imports/glm/detail/setup.hpp
        src/Imports/glm/detail/type_float.hpp
        src/Imports/glm/detail/type_half.hpp
        src/Imports/glm/detail/type_half.inl
        src/Imports/glm/detail/type_mat2x2.hpp
        src/Imports/glm/detail/type_mat2x2.inl
        src/Imports/glm/detail/type_mat2x3.hpp
        src/Imports/glm/detail/type_mat2x3.inl
        src/Imports/glm/detail/type_mat2x4.hpp
        src/Imports/glm/detail/type_mat2x4.inl
        src/Imports/glm/detail/type_mat3x2.hpp
        src/Imports/glm/detail/type_mat3x2.inl
        src/Imports/glm/detail/type_mat3x3.hpp
        src/Imports/glm/detail/type_mat3x3.inl
        src/Imports/glm/detail/type_mat3x4.hpp
        src/Imports/glm/detail/type_mat3x4.inl
        src/Imports/glm/detail/type_mat4x2.hpp
        src/Imports/glm/detail/type_mat4x2.inl
        src/Imports/glm/detail/type_mat4x3.hpp
        src/Imports/glm/detail/type_mat4x3.inl
        src/Imports/glm/detail/type_mat4x4.hpp
        src/Imports/glm/detail/type_mat4x4.inl
        src/Imports/glm/detail/type_mat4x4_simd.inl
        src/Imports/glm/detail/type_quat.hpp
        src/Imports/glm/detail/type_quat.inl
        src/Imports/glm/detail/type_quat_simd.inl
        src/Imports/glm/detail/type_vec1.hpp
        src/Imports/glm/detail/type_vec1.inl
        src/Imports/glm/detail/type_vec2.hpp
        src/Imports/glm/detail/type_vec2.inl
        src/Imports/glm/detail/type_vec3.hpp
        src/Imports/glm/detail/type_vec3.inl
        src/Imports/glm/detail/type_vec4.hpp
        src/Imports/glm/detail/type_vec4.inl
        src/Imports/glm/detail/type_vec4_simd.inl
        src/Imports/glm/ext/matrix_clip_space.hpp
        src/Imports/glm/ext/matrix_clip_space.inl
        src/Imports/glm/ext/matrix_common.hpp
        src/Imports/glm/ext/matrix_common.inl
        src/Imports/glm/ext/matrix_double2x2.hpp
        src/Imports/glm/ext/matrix_double2x2_precision.hpp
        src/Imports/glm/ext/matrix_double2x3.hpp
        src/Imports/glm/ext/matrix_double2x3_precision.hpp
        src/Imports/glm/ext/matrix_double2x4.hpp
        src/Imports/glm/ext/matrix_double2x4_precision.hpp
        src/Imports/glm/ext/matrix_double3x2.hpp
        src/Imports/glm/ext/matrix_double3x2_precision.hpp
        src/Imports/glm/ext/matrix_double3x3.hpp
        src/Imports/glm/ext/matrix_double3x3_precision.hpp
        src/Imports/glm/ext/matrix_double3x4.hpp
        src/Imports/glm/ext/matrix_double3x4_precision.hpp
        src/Imports/glm/ext/matrix_double4x2.hpp
        src/Imports/glm/ext/matrix_double4x2_precision.hpp
        src/Imports/glm/ext/matrix_double4x3.hpp
        src/Imports/glm/ext/matrix_double4x3_precision.hpp
        src/Imports/glm/ext/matrix_double4x4.hpp
        src/Imports/glm/ext/matrix_double4x4_precision.hpp
        src/Imports/glm/ext/matrix_float2x2.hpp
        src/Imports/glm/ext/matrix_float2x2_precision.hpp
        src/Imports/glm/ext/matrix_float2x3.hpp
        src/Imports/glm/ext/matrix_float2x3_precision.hpp
        src/Imports/glm/ext/matrix_float2x4.hpp
        src/Imports/glm/ext/matrix_float2x4_precision.hpp
        src/Imports/glm/ext/matrix_float3x2.hpp
        src/Imports/glm/ext/matrix_float3x2_precision.hpp
        src/Imports/glm/ext/matrix_float3x3.hpp
        src/Imports/glm/ext/matrix_float3x3_precision.hpp
        src/Imports/glm/ext/matrix_float3x4.hpp
        src/Imports/glm/ext/matrix_float3x4_precision.hpp
        src/Imports/glm/ext/matrix_float4x2.hpp
        src/Imports/glm/ext/matrix_float4x2_precision.hpp
        src/Imports/glm/ext/matrix_float4x3.hpp
        src/Imports/glm/ext/matrix_float4x3_precision.hpp
        src/Imports/glm/ext/matrix_float4x4.hpp
        src/Imports/glm/ext/matrix_float4x4_precision.hpp
        src/Imports/glm/ext/matrix_int2x2.hpp
        src/Imports/glm/ext/matrix_int2x2_sized.hpp
        src/Imports/glm/ext/matrix_int2x3.hpp
        src/Imports/glm/ext/matrix_int2x3_sized.hpp
        src/Imports/glm/ext/matrix_int2x4.hpp
        src/Imports/glm/ext/matrix_int2x4_sized.hpp
        src/Imports/glm/ext/matrix_int3x2.hpp
        src/Imports/glm/ext/matrix_int3x2_sized.hpp
        src/Imports/glm/ext/matrix_int3x3.hpp
        src/Imports/glm/ext/matrix_int3x3_sized.hpp
        src/Imports/glm/ext/matrix_int3x4.hpp
        src/Imports/glm/ext/matrix_int3x4_sized.hpp
        src/Imports/glm/ext/matrix_int4x2.hpp
        src/Imports/glm/ext/matrix_int4x2_sized.hpp
        src/Imports/glm/ext/matrix_int4x3.hpp
        src/Imports/glm/ext/matrix_int4x3_sized.hpp
        src/Imports/glm/ext/matrix_int4x4.hpp
        src/Imports/glm/ext/matrix_int4x4_sized.hpp
        src/Imports/glm/ext/matrix_projection.hpp
        src/Imports/glm/ext/matrix_projection.inl
        src/Imports/glm/ext/matrix_relational.hpp
        src/Imports/glm/ext/matrix_relational.inl
        src/Imports/glm/ext/matrix_transform.hpp
        src/Imports/glm/ext/matrix_transform.inl
        src/Imports/glm/ext/matrix_uint2x2.hpp
        src/Imports/glm/ext/matrix_uint2x2_sized.hpp
        src/Imports/glm/ext/matrix_uint2x3.hpp
        src/Imports/glm/ext/matrix_uint2x3_sized.hpp
        src/Imports/glm/ext/matrix_uint2x4.hpp
        src/Imports/glm/ext/matrix_uint2x4_sized.hpp
        src/Imports/glm/ext/matrix_uint3x2.hpp
        src/Imports/glm/ext/matrix_uint3x2_sized.hpp
        src/Imports/glm/ext/matrix_uint3x3.hpp
        src/Imports/glm/ext/matrix_uint3x3_sized.hpp
        src/Imports/glm/ext/matrix_uint3x4.hpp
        src/Imports/glm/ext/matrix_uint3x4_sized.hpp
        src/Imports/glm/ext/matrix_uint4x2.hpp
        src/Imports/glm/ext/matrix_uint4x2_sized.hpp
        src/Imports/glm/ext/matrix_uint4x3.hpp
        src/Imports/glm/ext/matrix_uint4x3_sized.hpp
        src/Imports/glm/ext/matrix_uint4x4.hpp
        src/Imports/glm/ext/matrix_uint4x4_sized.hpp
        src/Imports/glm/ext/quaternion_common.hpp
        src/Imports/glm/ext/quaternion_common.inl
        src/Imports/glm/ext/quaternion_common_simd.inl
        src/Imports/glm/ext/quaternion_double.hpp
        src/Imports/glm/ext/quaternion_double_precision.hpp
        src/Imports/glm/ext/quaternion_exponential.hpp
        src/Imports/glm/ext/quaternion_exponential.inl
        src/Imports/glm/ext/quaternion_float.hpp
        src/Imports/glm/ext/quaternion_float_precision.hpp
        src/Imports/glm/ext/quaternion_geometric.hpp
        src/Imports/glm/ext/quaternion_geometric.inl
        src/Imports/glm/ext/quaternion_relational.hpp
        src/Imports/glm/ext/quaternion_relational.inl
        src/Imports/glm/ext/quaternion_transform.hpp
        src/Imports/glm/ext/quaternion_transform.inl
        src/Imports/glm/ext/quaternion_trigonometric.hpp
        src/Imports/glm/ext/quaternion_trigonometric.inl
        src/Imports/glm/ext/scalar_common.hpp
        src/Imports/glm/ext/scalar_common.inl
        src/Imports/glm/ext/scalar_constants.hpp
        src/Imports/glm/ext/scalar_constants.inl
        src/Imports/glm/ext/scalar_int_sized.hpp
        src/Imports/glm/ext/scalar_integer.hpp
        src/Imports/glm/ext/scalar_integer.inl
        src/Imports/glm/ext/scalar_packing.hpp
        src/Imports/glm/ext/scalar_packing.inl
        src/Imports/glm/ext/scalar_relational.hpp
        src/Imports/glm/ext/scalar_relational.inl
        src/Imports/glm/ext/scalar_uint_sized.hpp
        src/Imports/glm/ext/scalar_ulp.hpp
        src/Imports/glm/ext/scalar_ulp.inl
        src/Imports/glm/ext/vector_bool1.hpp
        src/Imports/glm/ext/vector_bool1_precision.hpp
        src/Imports/glm/ext/vector_bool2.hpp
        src/Imports/glm/ext/vector_bool2_precision.hpp
        src/Imports/glm/ext/vector_bool3.hpp
        src/Imports/glm/ext/vector_bool3_precision.hpp
        src/Imports/glm/ext/vector_bool4.hpp
        src/Imports/glm/ext/vector_bool4_precision.hpp
        src/Imports/glm/ext/vector_common.hpp
        src/Imports/glm/ext/vector_common.inl
        src/Imports/glm/ext/vector_double1.hpp
        src/Imports/glm/ext/vector_double1_precision.hpp
        src/Imports/glm/ext/vector_double2.hpp
        src/Imports/glm/ext/vector_double2_precision.hpp
        src/Imports/glm/ext/vector_double3.hpp
        src/Imports/glm/ext/vector_double3_precision.hpp
        src/Imports/glm/ext/vector_double4.hpp
        src/Imports/glm/ext/vector_double4_precision.hpp
        src/Imports/glm/ext/vector_float1.hpp
        src/Imports/glm/ext/vector_float1_precision.hpp
        src/Imports/glm/ext/vector_float2.hpp
        src/Imports/glm/ext/vector_float2_precision.hpp
        src/Imports/glm/ext/vector_float3.hpp
        src/Imports/glm/ext/vector_float3_precision.hpp
        src/Imports/glm/ext/vector_float4.hpp
        src/Imports/glm/ext/vector_float4_precision.hpp
        src/Imports/glm/ext/vector_int1.hpp
        src/Imports/glm/ext/vector_int1_sized.hpp
        src/Imports/glm/ext/vector_int2.hpp
        src/Imports/glm/ext/vector_int2_sized.hpp
        src/Imports/glm/ext/vector_int3.hpp
        src/Imports/glm/ext/vector_int3_sized.hpp
        src/Imports/glm/ext/vector_int4.hpp
        src/Imports/glm/ext/vector_int4_sized.hpp
        src/Imports/glm/ext/vector_integer.hpp
        src/Imports/glm/ext/vector_integer.inl
        src/Imports/glm/ext/vector_packing.hpp
        src/Imports/glm/ext/vector_packing.inl
        src/Imports/glm/ext/vector_relational.hpp
        src/Imports/glm/ext/vector_relational.inl
        src/Imports/glm/ext/vector_uint1.hpp
        src/Imports/glm/ext/vector_uint1_sized.hpp
        src/Imports/glm/ext/vector_uint2.hpp
        src/Imports/glm/ext/vector_uint2_sized.hpp
        src/Imports/glm/ext/vector_uint3.hpp
        src/Imports/glm/ext/vector_uint3_sized.hpp
        src/Imports/glm/ext/vector_uint4.hpp
        src/Imports/glm/ext/vector_uint4_sized.hpp
        src/Imports/glm/ext/vector_ulp.hpp
        src/Imports/glm/ext/vector_ulp.inl
        src/Imports/glm/gtc/bitfield.hpp
        src/Imports/glm/gtc/bitfield.inl
        src/Imports/glm/gtc/color_space.hpp
        src/Imports/glm/gtc/color_space.inl
        src/Imports/glm/gtc/constants.hpp
        src/Imports/glm/gtc/constants.inl
        src/Imports/glm/gtc/epsilon.hpp
        src/Imports/glm/gtc/epsilon.inl
        src/Imports/glm/gtc/integer.hpp
        src/Imports/glm/gtc/integer.inl
        src/Imports/glm/gtc/matrix_access.hpp
        src/Imports/glm/gtc/matrix_access.inl
        src/Imports/glm/gtc/matrix_integer.hpp
        src/Imports/glm/gtc/matrix_inverse.hpp
        src/Imports/glm/gtc/matrix_inverse.inl
        src/Imports/glm/gtc/matrix_transform.hpp
        src/Imports/glm/gtc/matrix_transform.inl
        src/Imports/glm/gtc/noise.hpp
        src/Imports/glm/gtc/noise.inl
        src/Imports/glm/gtc/packing.hpp
        src/Imports/glm/gtc/packing.inl
        src/Imports/glm/gtc/quaternion.hpp
        src/Imports/glm/gtc/quaternion.inl
        src/Imports/glm/gtc/quaternion_simd.inl
        src/Imports/glm/gtc/random.hpp
        src/Imports/glm/gtc/random.inl
        src/Imports/glm/gtc/reciprocal.hpp
        src/Imports/glm/gtc/reciprocal.inl
        src/Imports/glm/gtc/round.hpp
        src/Imports/glm/gtc/round.inl
        src/Imports/glm/gtc/type_aligned.hpp
        src/Imports/glm/gtc/type_precision.hpp
        src/Imports/glm/gtc/type_precision.inl
        src/Imports/glm/gtc/type_ptr.hpp
        src/Imports/glm/gtc/type_ptr.inl
        src/Imports/glm/gtc/ulp.hpp
        src/Imports/glm/gtc/ulp.inl
        src/Imports/glm/gtc/vec1.hpp
        src/Imports/glm/gtx/associated_min_max.hpp
        src/Imports/glm/gtx/associated_min_max.inl
        src/Imports/glm/gtx/bit.hpp
        src/Imports/glm/gtx/bit.inl
        src/Imports/glm/gtx/closest_point.hpp
        src/Imports/glm/gtx/closest_point.inl
        src/Imports/glm/gtx/color_encoding.hpp
        src/Imports/glm/gtx/color_encoding.inl
        src/Imports/glm/gtx/color_space.hpp
        src/Imports/glm/gtx/color_space.inl
        src/Imports/glm/gtx/color_space_YCoCg.hpp
        src/Imports/glm/gtx/color_space_YCoCg.inl
        src/Imports/glm/gtx/common.hpp
        src/Imports/glm/gtx/common.inl
        src/Imports/glm/gtx/compatibility.hpp
        src/Imports/glm/gtx/compatibility.inl
        src/Imports/glm/gtx/component_wise.hpp
        src/Imports/glm/gtx/component_wise.inl
        src/Imports/glm/gtx/dual_quaternion.hpp
        src/Imports/glm/gtx/dual_quaternion.inl
        src/Imports/glm/gtx/easing.hpp
        src/Imports/glm/gtx/easing.inl
        src/Imports/glm/gtx/euler_angles.hpp
        src/Imports/glm/gtx/euler_angles.inl
        src/Imports/glm/gtx/extend.hpp
        src/Imports/glm/gtx/extend.inl
        src/Imports/glm/gtx/extended_min_max.hpp
        src/Imports/glm/gtx/extended_min_max.inl
        src/Imports/glm/gtx/exterior_product.hpp
        src/Imports/glm/gtx/exterior_product.inl
        src/Imports/glm/gtx/fast_exponential.hpp
        src/Imports/glm/gtx/fast_exponential.inl
        src/Imports/glm/gtx/fast_square_root.hpp
        src/Imports/glm/gtx/fast_square_root.inl
        src/Imports/glm/gtx/fast_trigonometry.hpp
        src/Imports/glm/gtx/fast_trigonometry.inl
        src/Imports/glm/gtx/float_notmalize.inl
        src/Imports/glm/gtx/functions.hpp
        src/Imports/glm/gtx/functions.inl
        src/Imports/glm/gtx/gradient_paint.hpp
        src/Imports/glm/gtx/gradient_paint.inl
        src/Imports/glm/gtx/handed_coordinate_space.hpp
        src/Imports/glm/gtx/handed_coordinate_space.inl
        src/Imports/glm/gtx/hash.hpp
        src/Imports/glm/gtx/hash.inl
        src/Imports/glm/gtx/integer.hpp
        src/Imports/glm/gtx/integer.inl
        src/Imports/glm/gtx/intersect.hpp
        src/Imports/glm/gtx/intersect.inl
        src/Imports/glm/gtx/io.hpp
        src/Imports/glm/gtx/io.inl
        src/Imports/glm/gtx/log_base.hpp
        src/Imports/glm/gtx/log_base.inl
        src/Imports/glm/gtx/matrix_cross_product.hpp
        src/Imports/glm/gtx/matrix_cross_product.inl
        src/Imports/glm/gtx/matrix_decompose.hpp
        src/Imports/glm/gtx/matrix_decompose.inl
        src/Imports/glm/gtx/matrix_factorisation.hpp
        src/Imports/glm/gtx/matrix_factorisation.inl
        src/Imports/glm/gtx/matrix_interpolation.hpp
        src/Imports/glm/gtx/matrix_interpolation.inl
        src/Imports/glm/gtx/matrix_major_storage.hpp
        src/Imports/glm/gtx/matrix_major_storage.inl
        src/Imports/glm/gtx/matrix_operation.hpp
        src/Imports/glm/gtx/matrix_operation.inl
        src/Imports/glm/gtx/matrix_query.hpp
        src/Imports/glm/gtx/matrix_query.inl
        src/Imports/glm/gtx/matrix_transform_2d.hpp
        src/Imports/glm/gtx/matrix_transform_2d.inl
        src/Imports/glm/gtx/mixed_product.hpp
        src/Imports/glm/gtx/mixed_product.inl
        src/Imports/glm/gtx/norm.hpp
        src/Imports/glm/gtx/norm.inl
        src/Imports/glm/gtx/normal.hpp
        src/Imports/glm/gtx/normal.inl
        src/Imports/glm/gtx/normalize_dot.hpp
        src/Imports/glm/gtx/normalize_dot.inl
        src/Imports/glm/gtx/number_precision.hpp
        src/Imports/glm/gtx/number_precision.inl
        src/Imports/glm/gtx/optimum_pow.hpp
        src/Imports/glm/gtx/optimum_pow.inl
        src/Imports/glm/gtx/orthonormalize.hpp
        src/Imports/glm/gtx/orthonormalize.inl
        src/Imports/glm/gtx/perpendicular.hpp
        src/Imports/glm/gtx/perpendicular.inl
        src/Imports/glm/gtx/polar_coordinates.hpp
        src/Imports/glm/gtx/polar_coordinates.inl
        src/Imports/glm/gtx/projection.hpp
        src/Imports/glm/gtx/projection.inl
        src/Imports/glm/gtx/quaternion.hpp
        src/Imports/glm/gtx/quaternion.inl
        src/Imports/glm/gtx/range.hpp
        src/Imports/glm/gtx/raw_data.hpp
        src/Imports/glm/gtx/raw_data.inl
        src/Imports/glm/gtx/rotate_normalized_axis.hpp
        src/Imports/glm/gtx/rotate_normalized_axis.inl
        src/Imports/glm/gtx/rotate_vector.hpp
        src/Imports/glm/gtx/rotate_vector.inl
        src/Imports/glm/gtx/scalar_multiplication.hpp
        src/Imports/glm/gtx/scalar_relational.hpp
        src/Imports/glm/gtx/scalar_relational.inl
        src/Imports/glm/gtx/spline.hpp
        src/Imports/glm/gtx/spline.inl
        src/Imports/glm/gtx/std_based_type.hpp
        src/Imports/glm/gtx/std_based_type.inl
        src/Imports/glm/gtx/string_cast.hpp
        src/Imports/glm/gtx/string_cast.inl
        src/Imports/glm/gtx/texture.hpp
        src/Imports/glm/gtx/texture.inl
        src/Imports/glm/gtx/transform.hpp
        src/Imports/glm/gtx/transform.inl
        src/Imports/glm/gtx/transform2.hpp
        src/Imports/glm/gtx/transform2.inl
        src/Imports/glm/gtx/type_aligned.hpp
        src/Imports/glm/gtx/type_aligned.inl
        src/Imports/glm/gtx/type_trait.hpp
        src/Imports/glm/gtx/type_trait.inl
        src/Imports/glm/gtx/vec_swizzle.hpp
        src/Imports/glm/gtx/vector_angle.hpp
        src/Imports/glm/gtx/vector_angle.inl
        src/Imports/glm/gtx/vector_query.hpp
        src/Imports/glm/gtx/vector_query.inl
        src/Imports/glm/gtx/wrap.hpp
        src/Imports/glm/gtx/wrap.inl
        src/Imports/glm/simd/common.h
        src/Imports/glm/simd/exponential.h
        src/Imports/glm/simd/geometric.h
        src/Imports/glm/simd/integer.h
        src/Imports/glm/simd/matrix.h
        src/Imports/glm/simd/neon.h
        src/Imports/glm/simd/packing.h
        src/Imports/glm/simd/platform.h
        src/Imports/glm/simd/trigonometric.h
        src/Imports/glm/simd/vector_relational.h
        src/Imports/glm/common.hpp
        src/Imports/glm/exponential.hpp
        src/Imports/glm/ext.hpp
        src/Imports/glm/fwd.hpp
        src/Imports/glm/geometric.hpp
        src/Imports/glm/glm.hpp
        src/Imports/glm/integer.hpp
        src/Imports/glm/mat2x2.hpp
        src/Imports/glm/mat2x3.hpp
        src/Imports/glm/mat2x4.hpp
        src/Imports/glm/mat3x2.hpp
        src/Imports/glm/mat3x3.hpp
        src/Imports/glm/mat3x4.hpp
        src/Imports/glm/mat4x2.hpp
        src/Imports/glm/mat4x3.hpp
        src/Imports/glm/mat4x4.hpp
        src/Imports/glm/matrix.hpp
        src/Imports/glm/packing.hpp
        src/Imports/glm/trigonometric.hpp
        src/Imports/glm/vec2.hpp
        src/Imports/glm/vec3.hpp
        src/Imports/glm/vec4.hpp
        src/Imports/glm/vector_relational.hpp
        src/Imports/stb_image/stb_image.cpp
        src/Imports/stb_image/stb_image.h
        src/Seens/BasicMovement.cpp
        src/Seens/BasicMovement.hpp
        src/Camera.cpp
        src/Camera.hpp
        src/FrameBufferObject.cpp
        src/FrameBufferObject.hpp
        src/IndexBuffer.cpp
        src/IndexBuffer.hpp
        src/kaijuGL.hpp
        src/KaijuWindow.cpp
        src/KaijuWindow.hpp
        src/Renderer.cpp
        src/Renderer.hpp
        src/Shader.cpp
        src/Shader.hpp
        src/SimpleObject.cpp
        src/SimpleObject.hpp
        src/SimplePhysics.cpp
        src/SimplePhysics.hpp
        src/Texture.cpp
        src/Texture.hpp
        src/VertexArray.cpp
        src/VertexArray.hpp
        src/VertexBuffer.cpp
        src/VertexBuffer.hpp
        src/VertexBufferLayout.hpp
        main.cpp)
